--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha",
-    "start": "node app.js"
+    "start": "node app.js",
+    "start:prod": "NODE_ENV=prod node app.js",
+    "start:dev": "NODE_ENV=dev node app.js"
+
   },
   "repository": {
     "type": "git",
@@ -24,6 +27,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "helmet": "^5.0.2",
