--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "mocha",
     "start": "node app.js",
-    "start:prod": "NODE_ENV=prod node app.js",
-    "start:dev": "NODE_ENV=dev node app.js"
-
+    "forever": "forever app.js",
+    "start:prod": "NODE_ENV=prod forever app.js",
+    "start:dev": "NODE_ENV=dev forever app.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "forever": "^4.0.3",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
